--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div> 
     <nav> 
      <ul> 
-      <li> <a href="Mr.Tian.github.io">个人网页</a></li> 	 
+      <li> <a href="#">个人网页</a></li> 	 
       <!--<li><a href="#elements">Elements</a></li>--> 
      </ul> 
     </nav> 
