--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head> 
-  <title>Mr.Tian</title> 
+  <title>渝欢个人网页</title> 
   <meta name="description" content="愿你历尽千帆，归来仍是少年！" /> 
   <meta charset="utf-8" /> 
   <meta http-equiv="content-language" content="zh-cn" /> 
@@ -18,7 +18,7 @@
    <!-- Header --> 
    <header id="header"> 
     <div class="icon"> 
-     <img src="images/Mr.Tian1.png" alt="Mr.Tian" title="Mr.Tian" class="logo" /> 
+     <img src="images/Mr.Tian1.png" alt="渝欢" title="渝欢" class="logo" /> 
     </div> 
     <div class="content"> 
      <div class="inner"> 
@@ -38,7 +38,7 @@
     
     <p class="copyright"><script>
 		var mydate = new Date();
-		document.writeln("Copyright&nbsp;&copy;&nbsp;2022 - "+mydate.getFullYear()+'&nbsp;百顺网络科技<br />All&nbsp;Rights&nbsp;Reserved');</script></p> 
+		document.writeln("Copyright&nbsp;&copy;&nbsp;2022 - "+mydate.getFullYear()+'&nbsp;渝欢<br />All&nbsp;Rights&nbsp;Reserved');</script></p> 
 	<p class="copyright">纵有千古，横有八方；前途似海，来日方长</p> 
    </footer> 
   </div> 
