--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head> 
-  <title>渝欢个人网页</title> 
+  <title>渝欢的个人网页</title> 
   <meta name="description" content="愿你历尽千帆，归来仍是少年！" /> 
   <meta charset="utf-8" /> 
   <meta http-equiv="content-language" content="zh-cn" /> 
@@ -22,7 +22,8 @@
     </div> 
     <div class="content"> 
      <div class="inner"> 
-      <h1>Mr.Tian</h1> 
+      <h1>渝欢</h1> 
+	<h2>Mr.Tian</h2>     
       <p>愿你历尽千帆，归来仍是少年！</p>
      </div> 
     </div> 
