--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <!-- Header --> 
    <header id="header"> 
     <div class="icon"> 
-     <img src="images/Mr.Tian1.png" alt="渝欢" title="渝欢" class="logo" /> 
+     <img src="images/touxiang.jpg" alt="渝欢" title="渝欢" class="logo" /> 
     </div> 
     <div class="content"> 
      <div class="inner"> 
