--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="愿你历尽千帆，归来仍是少年！" /> 
   <meta charset="utf-8" /> 
   <meta http-equiv="content-language" content="zh-cn" /> 
-  <link rel="shortcut icon" href="images/Mr.Tian.png" /> 
+  <link rel="shortcut icon" href="images/touxiang.jpg" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> 
   <link rel="stylesheet" href="assets/css/main.css" /> 
   <noscript> 
