--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/touxiang.jpg" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> 
   <link rel="stylesheet" href="assets/css/main.css" /> 
+<meta name="google-site-verification" content="cl_yPlKi50fe0gHicD51J6akCl2_sOt_6j2tSK3Jxp4" />	 
   <noscript> 
    <link rel="stylesheet" href="assets/css/noscript.css" /> 
   </noscript>
